[Fixed] Registration email login/register alignment

--- a/front-end/src/app/authentication/login/login.component.css
+++ b/front-end/src/app/authentication/login/login.component.css
@@ -1,5 +1,4 @@
 h1, h3, pre, label, p {
-  margin-top: 20px;
   color: white;
 }
 
